[tool.black]
exclude = '''
    (
        \.eggs
        | \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist

        # prefect-specific
        | node_modules
    )
    '''

[tool.poetry]
name = "prefect"
version = "0.15.9"
description = ""
authors = ["Andy <open@zhishimao.cn>"]

[tool.poetry.dependencies]
python = "~3.7"
click = ">=7.0,<9.0"
cloudpickle = ">=1.3.0"
croniter = ">=0.3.24,<2.0"
dask = ">=2.17.0"
distributed = ">=2.17.0"
docker = ">=3.4.1"
marshmallow = ">=3.0.0b19"
marshmallow-oneofschema = ">=2.0.0b2"
msgpack = ">=0.6.0"
mypy-extensions = ">=0.4.0"
packaging = ">=20.0,<22.0"
pendulum = ">=2.0.4"
python-dateutil = ">=2.7.0"
PyYAML = ">=3.13"
python-box = ">=5.1.0"
python-slugify = ">=1.2.6"
pytz = ">=2018.7"
requests = ">=2.20,<2.27"
tabulate = ">=0.8.0"
toml = ">=0.9.4"
urllib3 = ">=1.24.3"
testfixtures = ">=6.10.3"
responses = ">=0.14.0"


[tool.poetry.dev-dependencies]
black = "^21.11b1"
graphviz = ">=0.8"
Jinja2 = ">=2.0,<4.0"
mypy = ">=0.600,<0.813"
Pygments = ">=2.2,<3.0"
pytest = ">=6.0"
pytest-env = ">=0.6.0"
pytest-xdist = ">=2.0"
flaky = ">=3.0"
responses = ">=0.14.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
